gcc/testsuite/rust/rustc/ui/parser/missing-enum-issue-125446_dg.rs
Whoops {
// { dg-error "" "" { target *-*-* } .-1 }
// { help "" "" { target *-*-* } .-2 }
    OptionA,
    OptionB,
}

